intTests/test_parse_errors/parser003.log.good
Loading file "parser003.saw"
parser003.saw:2:36-2:38: Error: Syntax error: missing ';'
FAILED
